--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 <body>
     <main>
         <h1>Welcome to My Website</h1>  
+        <p><strong> ipsum dolor </strong> sit amet consectetur adipisicing elit. At iusto reprehenderit dicta eveniet quasi ea repellendus consectetur qui earum illo voluptatem quis aperiam, voluptate accusamus deserunt quod? Error, inventore tenetur!</p>
+        <hr>
+        <ul>
+            <li><a href="./styles/style.css">Hoja de estilos</a></li>
+            <li><a href="./img/favicon.ico">Logo Ortzi</a></li>
+        </ul>
+        <ol>
+            <li><a href="./LICENSE">Licencia del repositorio</a></li>
+            <li><a href="README.md"> README </a></li>
+        </ol>
+            <img 
+            src="./img/favicon.ico"
+            alt="Logo Ortzi"
+            >
     </main>
     <script src="index.js"></script>
 </body>
