--- a/c2-desenvolupamentfrontend/index.html
+++ b/c2-desenvolupamentfrontend/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repositorio de practica</title>
+    <title>C2 Desenvolupament de frontend</title>
     <link rel="stylesheet" href="./styleindex.css">
 </head>
 <body>
     <main>
+        <h1>Temas</h1>
+        <p>
+            <a href="htmlcss/">htmlcss</a>
+        </p>
     </main>
 </body>
 </html>
