--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repositorio de practica</title>
+    <title>Repositorio de practicas</title>
     <link rel="stylesheet" href="./styleindex.css">
 </head>
 <body>
     <main>
+        <h1>Directorios del proyecto</h1>
+        <p>
+            <a href="Prueba/">Prueba </a>
+            <br>
+            <a href="c2-desenvolupamentfrontend/">C2 Desenvolupament de frontend</a>
+        </p>
+        
     </main>
 </body>
 </html>
