--- a/c2-desenvolupamentfrontend/htmlcss/act1/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositorio de practica</title>
-    <link rel="stylesheet" href="./styleindex.css">
+    <link rel="stylesheet" href="./styles/styleindex.css">
 </head>
 <body>
     <main>
+        <h1>Archivos</h1>
+        <h2>Plato de la semana</h2>
+            <p>
+                
+            </p>
     </main>
 </body>
 </html>
