--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -21,10 +21,15 @@
             <li><a href="./LICENSE">Licencia del repositorio</a></li>
             <li><a href="README.md"> README </a></li>
         </ol>
-            <img 
+
+        <img 
             src="./img/favicon.ico"
             alt="Logo Ortzi"
-            >
+        >
+
+        <br>
+
+        <button class="botonatras"><a href="../">Atras</a></button>
     </main>
     <script src="index.js"></script>
 </body>
