--- a/c2-desenvolupamentfrontend/htmlcss/act1/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/index.html
@@ -12,8 +12,9 @@
         <h1>Archivos</h1>
         <h2>Plato de la semana</h2>
             <p>
-                
+                <a href="platosemana.html">Plato de la semana</a>
             </p>
+            <a href="../">Atras</a>
     </main>
 </body>
 </html>
