--- a/c2-desenvolupamentfrontend/htmlcss/act1/platosemana.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/platosemana.html
@@ -32,6 +32,7 @@
             Dejar que suelten el agua durante 30 minutos. <br>
             Enhaizarlas, ponerlas a freir durante 5 minutos en aceite bien caliente. <br>
         </p>
+        <a href="../">Atras</a>
     </main>
 </body>
 </html>
