--- a/c2-desenvolupamentfrontend/htmlcss/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/index.html
@@ -13,6 +13,7 @@
         <p>
             <a href="act1/">Actividad 1</a>
         </p>
+        <a href="../">Atras</a>
     </main>
 </body>
 </html>
