--- a/c2-desenvolupamentfrontend/htmlcss/act1/seccionesylineasgeneralesdeundochtml5.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/seccionesylineasgeneralesdeundochtml5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secciones y lineas generales de HTML5</title>
-    <link rel="stylesheet" href="./styleindex.css">
+    <link rel="stylesheet" href="./styles/seccionesylineas.css">
 </head>
 <body>
     <main>
