--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Welcome to My Website</h1>  
-        <p><strong> ipsum dolor </strong> sit amet consectetur adipisicing elit. At iusto reprehenderit dicta eveniet quasi ea repellendus consectetur qui earum illo voluptatem quis aperiam, voluptate accusamus deserunt quod? Error, inventore tenetur!</p>
+        <p><strong> ipsum dolor </strong> sit amet <em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet</em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet quasi ea repellendus consectetur qui earum illo voluptatem quis aperiam, voluptate accusamus deserunt quod? Error, inventore tenetur!</p>
         <hr>
         <ul>
             <li><a href="./styles/style.css">Hoja de estilos</a></li>
