--- a/c2-desenvolupamentfrontend/htmlcss/act1/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <main>
-        <h1>Archivos</h1>
-        <h2>Plato de la semana</h2>
-            <p>
-                <a href="platosemana.html">Plato de la semana</a>
-            </p>
-            <a href="../">Atras</a>
+        <h1>Ejercicios</h1>
+        <ol>
+            <li><a href="seccionesylineasgeneralesdeundochtml5.html">Secciones y lineas generales de un documento HTML5</a></li>
+            <li><a href="parrafoconimagenes.html">Párrafo con imagenes</a></li>
+            <li><a href="platosemanasinformato.html">Plato de la semana sin formato</a></li>
+            <li><a href="platosemanaformato.html">Plato de la semana con formato</a></li>            
+        </ol>
+        <a href="../">Atras</a>
     </main>
 </body>
 </html>
