--- a/c2-desenvolupamentfrontend/htmlcss/act1/platosemanasinformato.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/platosemanasinformato.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plato de la semana</title>
-    <link rel="stylesheet" href="./styles/styleplatosemana.css">
 </head>
 <body>
     <main>
@@ -32,7 +31,7 @@
             Dejar que suelten el agua durante 30 minutos. <br>
             Enhaizarlas, ponerlas a freir durante 5 minutos en aceite bien caliente. <br>
         </p>
-        <a href="../">Atras</a>
+        <a href="../act1/">Atrás</a>
     </main>
 </body>
 </html>
