--- a/c2-desenvolupamentfrontend/htmlcss/act1/platosemanaformato.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/platosemanaformato.html
@@ -11,10 +11,10 @@
     <main>
         <h1>Plato de la semana</h1>
         <h2>Berenjenas fritas</h2>
-        <p>Comensales: 4 personas <br></p>
-        <p>Tiempo de preparación: 10 minutos <br></p>
-        <p>Tiempo de cocción: 12 minutos</p>
-        <p>Ingredientes</p>
+        <p><span class="instrucciones">Comensales:</span> 4 personas <br></p>
+        <p><span class="instrucciones">Tiempo de preparación:</span> 10 minutos <br></p>
+        <p><span class="instrucciones">Tiempo de cocción:</span> 12 minutos</p>
+        <p class="ingredientesypreparacion">Ingredientes</p>
 
         <p> 
             4 berenjenas <br>
@@ -23,7 +23,7 @@
             4 cucharadas de harina y aceite <br>
         </p>
         
-        <p>Preparación</p>
+        <p class="ingredientesypreparacion">Preparación</p>
 
         <p>
             Lavar las berenjenas. <br>
