--- a/c2-desenvolupamentfrontend/htmlcss/act1/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/index.html
@@ -14,7 +14,8 @@
             <li><a href="seccionesylineasgeneralesdeundochtml5.html">Secciones y lineas generales de un documento HTML5</a></li>
             <li><a href="parrafoconimagenes.html">Párrafo con imagenes</a></li>
             <li><a href="platosemanasinformato.html">Plato de la semana sin formato</a></li>
-            <li><a href="platosemanaformato.html">Plato de la semana con formato</a></li>            
+            <li><a href="platosemanaformato.html">Plato de la semana con formato</a></li>
+            <li><a href="postresemana.html">Postre de la semana</a></li>            
         </ol>
         <a href="../">Atras</a>
     </main>
