--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/especies.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/especies.html
@@ -8,8 +8,44 @@
     <link rel="stylesheet" href="./styles/especies.css">
 </head>
 <body>
+    <h1><span class="verde">Parque natural</span> <span class="naranja">Sierra Bicuerca</span></h1>
+
+    <p>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="especies.html">Especies</a></li>
+                <li><a href="reservas.html">Reservas</a></li>
+                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="../parquenatural/">Atrás</a></li>
+            </ul>           
+    </p>
+
     <main>
-        <p><a href="../parquenatural/">Atrás</a></p>
+        <div>
+            <h2>Especies del parque</h2>
+
+            <p>
+                Estos son algunos de los habitantes del parque:
+            </p>
+
+            <h3 class="naranja">Nútria</h3>
+            <p>
+                La nutria europea o paleártica (Lutra lutra) es un mamífero carnívoro de hábitat acuático. Se alimenta de peces, ranas y
+
+                pequeñas presas que caza en el río. Cerca de sus lugares de cobijo, podremos ver toboganes que crean para llegar
+                rápidamente al agua.
+            </p>
+
+            <h3 class="naranja">Buitre leonado</h3>
+            <p>
+                El buitre leonado (Cyps fulvus) es un ave rapaz, una de las mayores que puede encontrarse en la Península Ibérica. Su alimentación principal es la carroña, que localiza con su aguda vista.
+            </p>
+
+            <h3 class="naranja">Gineta</h3>
+            <p>
+                La gineta (Cenetta genetta) es una especie de mamífero carnívoro. Son grandes trepadoras, muy ágiles y grandes cazadoreas de pequeños animales. Aunque tambien se alimentan de los frutos del bosque que se peden encontrar en el parque.
+            </p>
+        </div> 
     </main>
 </body>
 </html>
