--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
@@ -8,27 +8,34 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <main>
-        <h1>Parque natural sierra Bicuerca</h1>
-        <p>
+    <h1><span class="h1verde">Parque natural</span> <span class="h1naranja">Sierra Bicuerca</span></h1>
+
+    <p>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="especies.html">Especies</a></li>
                 <li><a href="reservas.html">Reservas</a></li>
                 <li><a href="galeria.html">Galería</a></li>
+                <li><a href="../parquenatural/">Atrás</a></li>
             </ul>           
-        </p>
-        
-        <h2>Bienvenidos al Parque Natural</h2>
-        <p>
-            El parque natural de la Sierra Bicuerca, reserva de la biosfera, es referencia obligada del bosque y matorral mediterráneo interior, y hábitat de la fauna y flora autóctona.
-        </p>
-        <p>
-            Fue declarado parque natural en 1983, con una superfície de 9090Has. siendo uno de los enclaves más extensos de la Comunidad Valenciana. Con un gran espesor de vegetación, y varios riachuelos ofrecen un clima ideal para las especies terrestres y acuáticas. Sus bosques, de carrasca y pino, albergan una amplia colonia de aves.
-        </p>
-        <p>
-            Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la zona. También nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al acercarnos a los riachuelos, veremos numerosas pisadas de jabalíes y ciervos, y si no hacemos mucho ruido, no es difícil encontrar alguno abrevando bajo la atenta mirada del martín pescador, esperando a la despistada trucha.
-        </p>
+    </p>
+
+    <main>
+        <div>
+            <h2>Bienvenidos al Parque Natural</h2>
+
+            <p>
+                El parque natural de la Sierra Bicuerca, reserva de la biosfera, es referencia obligada del bosque y matorral mediterráneo interior, y hábitat de la fauna y flora autóctona.
+            </p>
+
+            <p>
+                Fue declarado parque natural en 1983, con una superfície de 9090Has. siendo uno de los enclaves más extensos de la Comunidad Valenciana. Con un gran espesor de vegetación, y varios riachuelos ofrecen un clima ideal para las especies terrestres y acuáticas. Sus bosques, de carrasca y pino, albergan una amplia colonia de aves.
+            </p>
+
+            <p>
+                Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la zona. También nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al acercarnos a los riachuelos, veremos numerosas pisadas de jabalíes y ciervos, y si no hacemos mucho ruido, no es difícil encontrar alguno abrevando bajo la atenta mirada del martín pescador, esperando a la despistada trucha.
+            </p>
+        </div> 
     </main>
 </body>
 </html>
