--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
@@ -10,15 +10,14 @@
 <body>
     <h1><span class="h1verde">Parque natural</span> <span class="h1naranja">Sierra Bicuerca</span></h1>
 
-    <p>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="especies.html">Especies</a></li>
-                <li><a href="reservas.html">Reservas</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="../parquenatural/">Atrás</a></li>
-            </ul>           
-    </p>
+
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="especies.html">Especies</a></li>
+        <li><a href="reservas.html">Reservas</a></li>
+        <li><a href="galeria.html">Galería</a></li>
+        <li><a href="../">Ejercicios</a></li>
+    </ul>           
 
     <main>
         <div>
