--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
@@ -8,33 +8,43 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <h1><span class="h1verde">Parque natural</span> <span class="h1naranja">Sierra Bicuerca</span></h1>
+    <div>
+        <img src="./imagenes/panoramica.jpg">
+        
+        <h1><span class="h1verde">Parque natural</span> <span class="h1naranja">Sierra Bicuerca</span></h1>
 
 
-    <span class="menu">
-        <button class="botoninicio"><a class="black" href="index.html">Inicio</a></button>
-        <button class="botonverde"><a class="grey" href="especies.html">Especies</a></button>
-        <button class="botonverde"><a class="grey" href="reservas.html">Reservas</a></button>
-        <button class="botonverde"><a class="grey" href="galeria.html">Galería</a></button>
-        <button class="botonverde"><a class="grey" href="../">Ejercicios</a></button>
-    </span>           
+        <span class="menu">
+            <button class="botoninicio"><a class="black" href="index.html">Inicio</a></button>
+            <button class="botonverde"><a class="grey" href="especies.html">Especies</a></button>
+            <button class="botonverde"><a class="grey" href="reservas.html">Reservas</a></button>
+            <button class="botonverde"><a class="grey" href="galeria.html">Galería</a></button>
+            <button class="botonverde"><a class="grey" href="../">Ejercicios</a></button>
+        </span>           
 
-    <main>
-        <div>
-            <h2>Bienvenidos al Parque Natural</h2>
+        <main>
+            <div class="contenido">
+                <h2>Bienvenidos al Parque Natural</h2>
 
+                <p>
+                    El parque natural de la Sierra Bicuerca, reserva de la biosfera, es referencia obligada del bosque y matorral mediterráneo interior, y hábitat de la fauna y flora autóctona.
+                </p>
+
+                <p>
+                    Fue declarado parque natural en 1983, con una superfície de 9090Has. siendo uno de los enclaves más extensos de la Comunidad Valenciana. Con un gran espesor de vegetación, y varios riachuelos ofrecen un clima ideal para las especies terrestres y acuáticas. Sus bosques, de carrasca y pino, albergan una amplia colonia de aves.
+                </p>
+
+                <p>
+                    Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la zona. También nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al acercarnos a los riachuelos, veremos numerosas pisadas de jabalíes y ciervos, y si no hacemos mucho ruido, no es difícil encontrar alguno abrevando bajo la atenta mirada del martín pescador, esperando a la despistada trucha.
+                </p>
+            </div> 
+        </main>
+
+        <div  class="ccimagen">
             <p>
-                El parque natural de la Sierra Bicuerca, reserva de la biosfera, es referencia obligada del bosque y matorral mediterráneo interior, y hábitat de la fauna y flora autóctona.
+            La imagen del título pertenece a <span class="underline">AMagil</span> y se distribuye bajo licencia <span class="underline">CreativeCommons</span>.
             </p>
-
-            <p>
-                Fue declarado parque natural en 1983, con una superfície de 9090Has. siendo uno de los enclaves más extensos de la Comunidad Valenciana. Con un gran espesor de vegetación, y varios riachuelos ofrecen un clima ideal para las especies terrestres y acuáticas. Sus bosques, de carrasca y pino, albergan una amplia colonia de aves.
-            </p>
-
-            <p>
-                Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la zona. También nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al acercarnos a los riachuelos, veremos numerosas pisadas de jabalíes y ciervos, y si no hacemos mucho ruido, no es difícil encontrar alguno abrevando bajo la atenta mirada del martín pescador, esperando a la despistada trucha.
-            </p>
-        </div> 
-    </main>
+        </div>
+    </div>
 </body>
 </html>
