--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -23,6 +23,32 @@
 
         <button class="botonatras"><a href="../">Atras</a></button>
     </main>
+    <table>
+        <tr>
+            <th></th>
+            <th>Población</th>
+            <th>Hombres</th>
+            <th>Mujeres</th>
+        </tr>
+        <tr>
+            <th>Alemania</th>
+            <td>82.020.578</td>
+            <td>40.368853</td>
+            <td>41.673.725</td>
+        </tr>
+        <tr>
+            <th>Francia</th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>Reino unido</th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
     <script src="index.js"></script>
 </body>
 </html>
