--- a/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/act1/parquenatural/index.html
@@ -14,13 +14,13 @@
         <h1><span class="h1verde">Parque natural</span> <span class="h1naranja">Sierra Bicuerca</span></h1>
 
 
-        <span class="menu">
+        <nav class="menu">
             <button class="botoninicio"><a class="black" href="index.html">Inicio</a></button>
             <button class="botonverde"><a class="grey" href="especies.html">Especies</a></button>
             <button class="botonverde"><a class="grey" href="reservas.html">Reservas</a></button>
             <button class="botonverde"><a class="grey" href="galeria.html">Galería</a></button>
             <button class="botonverde"><a class="grey" href="../">Ejercicios</a></button>
-        </span>           
+        </nav>           
 
         <main>
             <div class="contenido">
