--- a/c2-desenvolupamentfrontend/index.html
+++ b/c2-desenvolupamentfrontend/index.html
@@ -10,10 +10,8 @@
 <body>
     <main>
         <h1>Temas</h1>
-        <p>
-            <a href="htmlcss/">htmlcss</a>
-        </p>
-        <a href="../">Atras</a>
+        <button><a href="htmlcss/">htmlcss</a></button>
+        <button><a href="../">Atras</a></button>
     </main>
 </body>
 </html>
