--- a/c2-desenvolupamentfrontend/htmlcss/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/index.html
@@ -10,10 +10,9 @@
 <body>
     <main>
         <h1>Actividades</h1>
-        <p>
-            <a href="act1/">Actividad 1</a>
-        </p>
-        <a href="../">Atras</a>
+        <button><a href="act1/">T03-HTML_CSS</a></button>
+        <button><a href="tablas/">T04-Tablas_DIV</a></button>
+        <button><a href="../">Atras</a></button>
     </main>
 </body>
 </html>
