--- a/c2-desenvolupamentfrontend/htmlcss/tablas/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/tablas/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indíce Tablas</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <main>
+        <h1>TABLAS_DIV</h1>
+        <button><a href="deportes/donde.html">Deportes donde</a></button>
+        <button><a href="deportes/instalaciones.html">Deportes instalaciones</a></button>
+        <button><a href="13.html">13</a></button>
+        <button><a href="14.html">14</a></button>
+        <button><a href="15.html">15</a></button>
+        <button><a href="16.html">16</a></button>
+        <button><a href="17.html">17</a></button>
+        <button><a href="18.html">18</a></button>
+        <button><a href="19.html">19</a></button>
+        <button><a href="20.html">20</a></button>
+        <button><a href="../">Atras</a></button>
     </main>
 </body>
 </html>
