google y prueba flex

--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -9,43 +9,56 @@
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-        <p><strong> ipsum dolor </strong> sit amet <em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet</em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet quasi ea repellendus consectetur qui earum illo voluptatem quis aperiam, voluptate accusamus deserunt quod? Error, inventore tenetur!</p>
-        <hr>
-        <ul>
-            <li><a href="./styles/style.css">Hoja de estilos</a></li>
-        </ul>
-        <ol>
-            <li><a href="./LICENSE">Licencia del repositorio</a></li>
-            <li><a href="README.md"> README </a></li>
-        </ol>
-    </main>
-    <table>
-        <tr>
-            <th></th>
-            <th>Población</th>
-            <th>Hombres</th>
-            <th>Mujeres</th>
-        </tr>
-        <tr>
-            <th>Alemania</th>
-            <td>82.020.578</td>
-            <td>40.368853</td>
-            <td>41.673.725</td>
-        </tr>
-        <tr>
-            <th>Francia</th>
-            <td>65.578.819</td>
-            <td>31.764.615</td>
-            <td>33.814.204</td>
-        </tr>
-        <tr>
-            <th>Reino unido</th>
-            <td>63.896.071</td>
-            <td>31.423.339</td>
-            <td>32.472.732</td>
-        </tr>
-    </table>
-    <button class="botonatras"><a href="../">Atras</a></button>
+    <div class="container">
+        <div id="head">
+            <ul>
+                <li><a href="./styles/style.css">Hoja de estilos</a></li>
+            </ul>
+            <ol>
+                <li><a href="./LICENSE">Licencia del repositorio</a></li>
+                <li><a href="README.md"> README </a></li>
+            </ol>
+        </div>
+        <div id="main">
+            <div id="main-izq">
+                <h1>Welcome to My Website</h1>  
+                <p><strong> ipsum dolor </strong> sit amet <em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet</em>consectetur adipisicing elit. At iusto reprehenderit dicta eveniet quasi ea repellendus consectetur qui earum illo voluptatem quis aperiam, voluptate accusamus deserunt quod? Error, inventore tenetur!</p>
+            </div>
+            <div id="main-der">
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Población</th>
+                        <th>Hombres</th>
+                        <th>Mujeres</th>
+                    </tr>
+                    <tr>
+                        <th>Alemania</th>
+                        <td>82.020.578</td>
+                        <td>40.368853</td>
+                        <td>41.673.725</td>
+                    </tr>
+                    <tr>
+                        <th>Francia</th>
+                        <td>65.578.819</td>
+                        <td>31.764.615</td>
+                        <td>33.814.204</td>
+                    </tr>
+                    <tr>
+                        <th>Reino unido</th>
+                        <td>63.896.071</td>
+                        <td>31.423.339</td>
+                        <td>32.472.732</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div id="foot">
+            <div class="footer-box"><button class="botonatras"><a href="../">Atras</a></button></div>
+            <div class="footer-box">al</div>
+            <div class="footer-box">al</div>
+            <div class="footer-box">al</div>
+            <div class="footer-box">al</div>
+        </div>
+    </div>
 </html>
