--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="./styleindex.css">
 </head>
 <body>
-    <main>
-        <h1>Directorios del proyecto</h1>
-        <p>
-            <a href="Prueba/">Prueba </a>
-            <br>
-            <a href="c2-desenvolupamentfrontend/">C2 Desenvolupament de frontend</a>
-        </p>
-        
-    </main>
+    <div>
+        <div>
+            <h1>Directorios del proyecto</h1>
+            <p>
+                <a href="Prueba/">Prueba </a>
+                <br>
+                <a href="c2-desenvolupamentfrontend/">C2 Desenvolupament de frontend</a>
+            </p>
+        </div>        
+    </div>
 </body>
 </html>
