--- a/c2-desenvolupamentfrontend/Bootstrap/pages/1.html
+++ b/c2-desenvolupamentfrontend/Bootstrap/pages/1.html
@@ -8,25 +8,23 @@
     <link rel="stylesheet" href="../css/1.css">
 </head>
 <body>
-    <div id="container">
-        <div id="logintext"></div>
-        <div id="loginform">
-            <form>
-                <div class="mb-3">
-                    <label for="User" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <button type="submit" class="btn btn-primary">Log in</button>
-            </form>
-        </div>
-        <div id="footer">
-            <div id="footertext"></div>
-            <div id="loginoptions"></div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col logintext">
+                <h1>Login Form</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ex nemo aliquid sit molestias numquam, repudiandae in.</p>
+            </div>
         </div>
     </div>
+    
+    <form>
+        <div class="mb-3">
+            <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="UsernameHelp" placeholder="Username">
+        </div>
+        <div class="mb-3">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Log in</button>
+    </form>
 </body>
 </html>
