--- a/c2-desenvolupamentfrontend/htmlcss/index.html
+++ b/c2-desenvolupamentfrontend/htmlcss/index.html
@@ -12,6 +12,7 @@
         <h1>Actividades</h1>
         <button><a href="act1/">T03-HTML_CSS</a></button>
         <button><a href="tablas/">T04-Tablas_DIV</a></button>
+        <button><a href="layout/">T05-LayOut</a></button>
         <button><a href="../">Atras</a></button>
     </main>
 </body>
